# conan2_structure_prototype

./: .gitignore  README.md  build_01_fail.sh  build_02_fail.sh  build_all.sh  clean_all.sh
Case_01/: CMakeLists.txt  conanfile.py
Case_01/src/mid_a/: CMakeLists.txt  mid.h
Case_01/test_package/: CMakeLists.txt  conanfile.py
Case_01/test_package/src/: example.cpp
Case_02/: CMakeLists.txt  conanfile.py
Case_02/src/mid_a/: mid.cpp  mid.h
Case_02/test_package/: CMakeLists.txt
Case_02/test_package/src/: example.cpp
Mid/: CMakeLists.txt  conanfile.py
Mid/src/mid_a/: CMakeLists.txt  mid.cpp  mid.h
Mid/test_package/: CMakeLists.txt  conanfile.py
Mid/test_package/src/: example.cpp
Up/: CMakeLists.txt  conanfile.py
Up/src/up_a/: CMakeLists.txt  up.cpp  up_a.cpp  up_a.h
Up/src/up_b/: CMakeLists.txt  up_b.cpp
Up/test_package/: CMakeLists.txt  conanfile.py
Up/test_package/src/: example.cpp
